--- a/oclint-scripts/build
+++ b/oclint-scripts/build
@@ -32,7 +32,7 @@ def build_command(module_name, llvm_root, is_release, no_ninja, is_docgen, modul
     if is_docgen:
         cmd_build.doc_gen_build()
     extras = {'LLVM_ROOT': llvm_root}
-    extras.update(module_extras)
+    extras |= module_extras
     return cmd_build.append_dict(extras).str()
 
 def build_module(module_name, llvm_root, is_release, no_ninja, is_docgen, j):
@@ -40,7 +40,7 @@ def build_module(module_name, llvm_root, is_release, no_ninja, is_docgen, j):
     source_path = path.oclint_module_source_dir(module_name)
 
     module_extras = {}
-    if module_name == "rules" or module_name == "reporters" or module_name == "driver":
+    if module_name in ["rules", "reporters", "driver"]:
         module_extras['OCLINT_SOURCE_DIR'] = path.source.core_dir
         module_extras['OCLINT_BUILD_DIR'] = path.build.core_build_dir
     if module_name == "rules":
